force-app/main/default/objects/Sell_Bill__c/Sell_Bill__c.object-meta.xml
<CustomObject>
    <description>Object to hold revenue projections from product schedules taken at the beginning of a quarter</description>
    <label>Sell &amp; Bill</label>
    <nameField>
        <label>Sell &amp; Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell &amp; Bill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>