force-app/main/default/objects/Sell_Bill__c/fields/Month_2__c.field-meta.xml
<CustomField>
    <fullName>Month_2__c</fullName>
    <label>Month 2</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>