force-app/main/default/objects/Sell_Bill__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Europe and IMEA</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>NAMER</fullName>
            </value>
            <value>
                <fullName>NAMER GLOBAL</fullName>
            </value>
            <value>
                <fullName>NAMER McDONALDS</fullName>
            </value>
            <value>
                <fullName>NAMER SMB</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>VP OFFICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>