force-app/main/default/objects/Sell_Bill__c/fields/Region_Total__c.field-meta.xml
<CustomField>
    <fullName>Region_Total__c</fullName>
    <label>Region Total</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>